--- a/MainApp/app/src/main/res/layout/connexion.xml
+++ b/MainApp/app/src/main/res/layout/connexion.xml
@@ -5,7 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightgray"
-    tools:context=".MainActivity">
+    tools:context=".Connexion">
+
+
+    <fragment
+        android:id="@+id/fragment1"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph" />
 
     <TextView
         android:id="@+id/connexion"
