--- a/MainApp/app/src/main/res/layout/message_list.xml
+++ b/MainApp/app/src/main/res/layout/message_list.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MessageList">
 
     <ListView
         android:id="@+id/listview"
         android:divider="@color/white"
         android:dividerHeight="10sp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+    </ListView>
 
 </RelativeLayout>
