--- a/Connexion_Inscription/app/src/main/res/values/colors.xml
+++ b/Connexion_Inscription/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lightgray">#D3D3D3</color>
     <color name="blue">#1569C7</color>
+    <color name="red">#FF0000</color>
 </resources>
