Adding some content to message viewer

--- a/MainApp/app/src/main/res/layout/rows.xml
+++ b/MainApp/app/src/main/res/layout/rows.xml
@@ -17,23 +17,33 @@
         android:layout_marginLeft="-10dp"
         tools:srcCompat="@drawable/profile" />
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"
-        android:text="Name" />
 
-    <TextView
-        android:id="@+id/lastText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"
-        android:text="lastText" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_weight="5"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:layout_alignParentTop="true"
+            android:text="Name" />
+
+        <TextView
+            android:id="@+id/lastText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:layout_centerVertical="true"
+            android:text="lastText" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/date"
@@ -41,6 +51,6 @@
             android:layout_alignParentBottom= "true"
             android:layout_height="15dp"
             android:text="Date" />
-</RelativeLayout>
+    </RelativeLayout>
 
 </LinearLayout>
