--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/recherche.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/recherche.xml
@@ -25,7 +25,7 @@
             android:paddingTop="0dp"
             android:paddingRight="0dp"
             android:paddingBottom="0dp"
-            android:text="Ajout de filtre"
+            android:text="@string/add_filter"
             android:textAllCaps="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="Recherche"
+            android:text="@string/search"
             android:textSize="19sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +95,7 @@
             android:outlineAmbientShadowColor="#3E2121"
             android:outlineProvider="paddedBounds"
             android:paddingStart="50dp"
-            android:text="Tapez ce que vous cherchez..."
+            android:text="@string/type_to_search"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
