--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/friend.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/friend.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="Amis"
+            android:text="@string/friend"
             android:textSize="19sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
             android:outlineAmbientShadowColor="#3E2121"
             android:outlineProvider="paddedBounds"
             android:paddingStart="50dp"
-            android:text="Tapez ce que vous cherchez..."
+            android:text="@string/type_to_search"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
