--- a/MainApp/app/src/main/res/values/colors.xml
+++ b/MainApp/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lightgray">#D3D3D3</color>
     <color name="blue">#1569C7</color>
+    <color name="message_user_bg">#194EEC</color>
 </resources>
