--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/values/colors.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightgray">#D3D3D3</color>
+    <color name="message_user_bg">#194EEC</color>
+
 </resources>
