--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/message_list.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/message_list.xml
@@ -1,18 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:context=".MessageList">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="32dp"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/_8fb410b7f050340f2409302d88d6baa_jpeg" />
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="28dp"
+            android:background="#E6E6E6"
+            android:scaleType="fitCenter"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/iconfinder_home_house_126572" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ListView
         android:id="@+id/listview"
-        android:divider="@color/white"
-        android:dividerHeight="10sp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:divider="@color/white"
+        android:dividerHeight="10sp">
+
     </ListView>
 
-</RelativeLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/btnChat"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="16dp"
+            android:background="#E3E3E3"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/iconfinder_message_misc_1276855" />
+
+        <ImageButton
+            android:id="@+id/btnFavorite3"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginBottom="16dp"
+            android:background="#E3E3E3"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/iconfinder_love_like_185083" />
+
+        <ImageButton
+            android:id="@+id/btnSearch"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="40dp"
+            android:layout_marginBottom="16dp"
+            android:background="#E3E3E3"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/iconfinder_search_blue" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
