(Feed, rech, ami, profilautre, filtre) Couleur se refere à color.xml

--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/filter.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/filter.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E6E6E6"
+    android:background="@color/lightgray"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,7 +30,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="28dp"
-            android:background="#E6E6E6"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +42,7 @@
             android:layout_height="40sp"
             android:layout_marginStart="28dp"
             android:layout_marginTop="28dp"
-            android:background="#E6E6E6"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/check"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
@@ -99,7 +99,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#2D9BF0"
+            android:backgroundTint="@color/blue"
             android:padding="0dp"
             android:paddingLeft="0dp"
             android:paddingTop="0dp"
@@ -107,7 +107,7 @@
             android:paddingBottom="0dp"
             android:text="@string/apply_filter"
             android:textAllCaps="false"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             app:cornerRadius="3sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
