--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/friend.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/friend.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E6E6E6"
+    android:background="@color/lightgray"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,7 +30,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="28dp"
-            android:background="#E6E6E6"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +42,7 @@
             android:layout_height="40sp"
             android:layout_marginStart="28dp"
             android:layout_marginTop="28dp"
-            android:background="#E6E6E6"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -68,13 +68,12 @@
             android:layout_marginEnd="32dp"
             android:background="@drawable/memo_border"
             android:backgroundTintMode="add"
-            android:drawableTint="#FFFFFF"
+            android:drawableTint="@color/white"
             android:editable="true"
             android:ems="10"
             android:inputType="text"
             android:letterSpacing="0"
             android:lineSpacingExtra="8sp"
-            android:outlineAmbientShadowColor="#3E2121"
             android:outlineProvider="paddedBounds"
             android:paddingStart="50dp"
             android:text="@string/type_to_search"
@@ -125,7 +124,7 @@
             android:layout_height="40sp"
             android:layout_marginStart="40dp"
             android:layout_marginBottom="16dp"
-            android:background="#E3E3E3"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +135,7 @@
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_marginBottom="16dp"
-            android:background="#E3E3E3"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -150,7 +149,7 @@
             android:layout_height="40sp"
             android:layout_marginEnd="40dp"
             android:layout_marginBottom="16dp"
-            android:background="#E3E3E3"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
