--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/profilautre.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/profilautre.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E3E3E3">
+    android:background="@color/lightgray">
 
     <ImageButton
         android:id="@+id/btnMenu3"
@@ -12,7 +12,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="28dp"
-        android:background="#E6E6E6"
+        android:background="@color/lightgray"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -57,7 +57,7 @@
         android:layout_height="40sp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="28dp"
-        android:background="#E6E6E6"
+        android:background="@color/lightgray"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -79,7 +79,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ffffff">
+            android:background="@color/white">
 
             <TextView
                 android:id="@+id/textPAListeContact"
@@ -149,10 +149,10 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="10dp"
-                android:backgroundTint="#2D9BF0"
+                android:backgroundTint="@color/blue"
                 android:text="@string/friend_request"
                 android:textAllCaps="false"
-                android:textColor="#ffffff"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnEnvoyerMsgPrive"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -164,10 +164,10 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="10dp"
-                android:backgroundTint="#2D9BF0"
+                android:backgroundTint="@color/blue"
                 android:text="@string/send_dm"
                 android:textAllCaps="false"
-                android:textColor="#ffffff"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnDemandedami" />
