--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/recherche.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/recherche.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E6E6E6"
+    android:background="@color/lightgray"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,7 +19,7 @@
 
             android:layout_marginStart="32dp"
             android:layout_marginTop="10dp"
-            android:backgroundTint="#2D9BF0"
+            android:backgroundTint="@color/blue"
             android:padding="0dp"
             android:paddingLeft="0dp"
             android:paddingTop="0dp"
@@ -48,7 +48,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="28dp"
-            android:background="#E6E6E6"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -60,7 +60,7 @@
             android:layout_height="40sp"
             android:layout_marginStart="28dp"
             android:layout_marginTop="28dp"
-            android:background="#E6E6E6"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -86,13 +86,13 @@
             android:layout_marginEnd="32dp"
             android:background="@drawable/memo_border"
             android:backgroundTintMode="add"
-            android:drawableTint="#FFFFFF"
+            android:drawableTint="@color/white"
             android:editable="true"
             android:ems="10"
             android:inputType="text"
             android:letterSpacing="0"
             android:lineSpacingExtra="8sp"
-            android:outlineAmbientShadowColor="#3E2121"
+            android:outlineAmbientShadowColor="@color/black"
             android:outlineProvider="paddedBounds"
             android:paddingStart="50dp"
             android:text="@string/type_to_search"
@@ -143,7 +143,7 @@
             android:layout_height="40sp"
             android:layout_marginStart="40dp"
             android:layout_marginBottom="16dp"
-            android:background="#E3E3E3"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +154,7 @@
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_marginBottom="16dp"
-            android:background="#E3E3E3"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -168,7 +168,7 @@
             android:layout_height="40sp"
             android:layout_marginEnd="40dp"
             android:layout_marginBottom="16dp"
-            android:background="#E3E3E3"
+            android:background="@color/lightgray"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
