--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/message_viewer.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/message_viewer.xml
@@ -37,7 +37,7 @@
                 android:scaleType="fitCenter"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/daco_4219973" />
+                app:srcCompat="@drawable/back_arrow" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
