--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/profilautre.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/profilautre.xml
@@ -16,7 +16,7 @@
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/_3f948216ff912389efec6bc9ffe761c" />
+        app:srcCompat="@drawable/tripledots" />
 
     <ImageButton
         android:id="@+id/btnMyProfil3"
@@ -49,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/_8fb410b7f050340f2409302d88d6baa_jpeg" />
+        app:srcCompat="@drawable/udem" />
 
     <ImageButton
         android:id="@+id/btnBack8"
@@ -61,7 +61,7 @@
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/daco_4219973" />
+        app:srcCompat="@drawable/back_arrow" />
 
     <LinearLayout
         android:layout_width="match_parent"
