Checking up stuff

--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/message_list.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/message_list.xml
@@ -28,7 +28,7 @@
             android:layout_height="40sp"
             android:layout_marginStart="28dp"
             android:layout_marginTop="28dp"
-            android:background="#E6E6E6"
+            android:background="@color/white"
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -55,7 +55,7 @@
             android:layout_height="40sp"
             android:layout_marginEnd="40dp"
             android:layout_marginBottom="16dp"
-            android:background="#E3E3E3"
+            android:background="@color/white"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_marginBottom="16dp"
-            android:background="#E3E3E3"
+            android:background="@color/white"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +80,7 @@
             android:layout_height="40sp"
             android:layout_marginStart="40dp"
             android:layout_marginBottom="16dp"
-            android:background="#E3E3E3"
+            android:background="@color/white"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
