Completing profile section

--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/message_viewer.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/res/layout/message_viewer.xml
@@ -33,7 +33,7 @@
                 android:layout_height="40sp"
                 android:layout_marginStart="28dp"
                 android:layout_marginTop="28dp"
-                android:background="#E6E6E6"
+                android:background="@color/white"
                 android:scaleType="fitCenter"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
